[project]
name = "hvacnetwork"
version = "0.2.0"
description = "HVAC simulation framework with BACnet integration and Brick schema support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bacpypes3>=0.0.102",
    "rdflib>=7.1.4",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.15.2",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
